src/Hooli/wwwroot/css/site.css
/* ... */
.posts-orderby {
    position: absolute;
    top: 15px;
    right: 35px;
    font-size: 0.9em;
}

.posts-orderby p {
    margin: 0;
    text-align: right;
    font-weight: 700;
}

.posts-orderby button {
    display: inline;
    width: 50px;
}

.posts-type {
    width: 100%;
}

.post {
    border-top: 1px solid #DDD;
    width: 100%;
    min-height: 80px;
    clear: left;
}

.post-rating {
    margin-top:5px;
    height: 75px;
    text-align: center;
    float: left;
}

.vote {
    padding: 0;
    height: 15px;
    width: 100%;
    color: #fd7e23;
    font-size: 1.2em;
}

.vote:hover, .vote:active, .vote:focus, .vote.active, .open > .dropdown-toggle.vote {
    color: #fd7e23;
}

.btn-link-option {
    color: #333;
}

.post-rating-count {
    height: 20px;
    line-height: 30px;
    width: 100%;
}

.post-body {
    padding: 10px;
    float: left;
}

.post-body h2 {
    font-size: 1.4em;
    margin-top: 10px;
    margin-bottom: 5px;
}

.post-body-info {
    font-size: 0.9em;
}

.info-photo {
    position: relative;
    width: 100%;
    height: 160px;
    background-size: cover;
    background: #333;
    margin-bottom: 20px;
    color: #FFF;
    text-shadow: 0px 1px 5px #555;
    overflow: hidden;
}

a>.info-photo:hover {
    color: #EEE;
    filter: sepia(0.15) contrast(1.15);
   -webkit-filter: sepia(0.15) contrast(1.15);
}

.info-photo-shade {
    height: 40px;
    width: 100%;
    position: absolute;
    bottom: 0;
    background: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
    background: -o-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
    background: -moz-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
}

.info-container>button {
    width: 100px;
    position: absolute;
    z-index: 20;
    top: 0;
    right: 15px;
}

.info-photo-user {
    height: 350px;
}

.info-photo h1 {
    position: absolute;
    bottom: 0;
    left: 10px;
}

.interesting h1 {
    font-size: 1.1em;
    line-height: 1.0em;
    overflow: hidden;
}

.margin-b-min {
    margin-bottom: 5px;
}

.info-info p {
    line-height: 1.3em;
}

.following-people .info-photo {
    height: 320px;
}

input[type=text],
input[type=email],
input[type=password],
input[type=date],
textarea {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    
    border-radius: 0;
    border: 1px solid #DDD;
    padding-left: 5px;
    text-align: left;
    background: rgba(255,255,255,0.9);
    outline: none;    
    height: 35px;
    margin-bottom: 5px;
}

textarea.form-control {
    border-radius: 0;
    border: 1px solid #DDD;
}

form input[type=email],
form input[type=password] {
    width: 100%;
    max-width: 100%;
}

.full-width {
    width: 100%;
    max-width: 100%;
}

form[id=form-signup] input[type=text] {
    width: 50%;
    float:left;
}

form input[type=checkbox],
form input[type=radio] {
    height: 12px;
}

#form-login span {
    font-weight: 400;
    font-size: 0.9em;
}

#form-login label {
    margin-bottom: 20px;
}

.form-login-forgotten {
    margin-top: 20px;
    font-size: 0.9em;
    font-weight: 700;
}

.form-seperator {
    padding-bottom: 20px;
    border-bottom: 1px solid #DDD;
}

.edit-info-container .form-group {
    margin-bottom: 0;
}

#moderator-list,
#banned-list {
    padding-top:8px;
}

.view-post {
    padding-top: 10px;
}

.view-post>.post-rating {
    height: 60px;
    margin-top: 15px;
    margin-right: 15px;
}

.view-post>p {
    font-size: 1em;
}

.info-photo.comment {
    width: 30px;
    height: 30px;
    float: left;
    margin-right: 10px;
    margin-bottom: inherit;
    position: absolute;
    border: 1px solid #333;
}
.info-photo.comment:hover {
    opacity: 0.8;
}

.comment-container {
    margin-bottom: 10px;
}

.parent-comment-container>.parent-comment-container {
    margin-left: 40px;
}

.parent-comment-container
>.parent-comment-container
>.parent-comment-container
>.parent-comment-container {
    margin-left: 0;
}

.comment-body {
    margin-left: 40px;
}

.comment-info {
    font-size: 0.8em;
    margin-bottom: 0;
}

.comment-text {
    font-size: 1em;
    color: #333;
    line-height: 1.2em;
    margin-bottom: 0;
}

.photo-sm {
    height: 60px;
    width: 60px;
    float: left;
    margin-right: 10px;
    border: 2px solid #333;
}

.mod-controls {
    width: 100px;
    position: absolute;
    right: 20px;
    top: 5px;
}

.search-mobile {
    display: none;
    float: right;
    margin-top: 10px;
    margin-right: 10px;
    width: 220px;
}

.search-mobile input[type=search] {
    width: 180px;
}

.shade-sm {
    width: 100%;
}

.clearfix:after { 
   content: " ";
   display: block; 
   height: 0; 
   clear: both;
}

.slider.open {
	max-height: 700px; /* approximate max height */

	transition-property: all;
	transition-duration: .5s;
	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
}

.slider {
    overflow: hidden;
	max-height: 0;
}

.fb-button {
    width: 100%;
    line-height: 35px;
    float: left;
    background-color: #3b5998;
    background-image: url('../images/fb_logo.png');
    background-position: 10px center;
    background-repeat: no-repeat;
    border-color: #3b5998;
    color: #fff;
    margin-bottom: 20px;
    padding-left: 40px;
    text-shadow: none;
}

.btn {
    border: 0 none;
}

.btn:focus, .btn:active:focus, .btn.active:focus {
    outline: 0 none;
}

.btn-primary,
.btn-danger {
    border-radius: 0;
}

.btn-primary {
    background: #fd7e23;
    color: #ffffff;
}

.btn-primary:hover, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
    background: #FF964B;
}

.btn-primary:focus {
    background: #fd7e23;    
}

.btn-hooli {
    color: #333;
}

.btn-hooli-link {
    color: #fd7e23;
    padding: 0;
    font-weight: bolder;
}

.btn-hooli-link:hover, .btn-hooli-link:focus, .btn-hooli-link:active, .btn-hooli-link.active, .open > .dropdown-toggle.btn-hooli-link {
    color: #FF964B;
}
/* ... */

